[tool.poetry]
name = "mlpcode"
version = "0.1.0"
description = "MLP cli for semester project"
authors = ["Arslan <rslnkrmt2552@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.1.1"
numpy = "^1.18.2"
tensorflow-gpu = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
